--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/trendryol.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Earn USDT orders by Trendryol</title>
+    <title>Trendryol ile USDT siparişleri kazan</title>
   </head>
   <body>
     <div id="root"></div>
